--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -1,66 +1,68 @@
 <div mat-dialog-title>
     <h1>Employee Form</h1>
 </div>
-<div mat-dialog-content class="content">
-    <div class="row">
-        <mat-form-field appearance="outline">
-            <mat-label>First Name</mat-label>
-            <input matInput type="text" placeholder="Ex: Bhagya">
-          </mat-form-field>
-          <mat-form-field appearance="outline">
-            <mat-label>Last Name</mat-label>
-            <input matInput type="text" placeholder="Ex: Dilhara">
-          </mat-form-field>
+<form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
+    <div mat-dialog-content class="content">
+        <div class="row">
+            <mat-form-field appearance="outline">
+                <mat-label>First Name</mat-label>
+                <input matInput type="text" placeholder="Ex: Bhagya" formControlName="firstName">
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Last Name</mat-label>
+                <input matInput type="text" placeholder="Ex: Dilhara" formControlName="lastName">
+            </mat-form-field>
+        </div>
+        <div class="row">
+            <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput type="email" placeholder="Ex: bhagya@gmail.com" formControlName="email">
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Date of Birth</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="dob">
+                <mat-hint>MM/DD/YYYY</mat-hint>
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            
+        </div>
+        <div class="row">
+            <mat-radio-group aria-label="Select an option" color="primary" formControlName="gender">
+                <mat-label>Gender</mat-label>
+                <mat-radio-button value="male" >Male</mat-radio-button>
+                <mat-radio-button value="female">Female</mat-radio-button>
+            </mat-radio-group>
+        </div>
+        <div class="row">
+            <mat-form-field appearance="outline">
+                <mat-label>Education</mat-label>
+                <mat-select formControlName="education">
+                <mat-option *ngFor="let val of education" [value]="val">
+                    {{val}}
+                </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Company</mat-label>
+                <input matInput type="text" placeholder="Ex: Netflix" formControlName="company">
+            </mat-form-field>
+        </div>
+        <div class="row">
+            <mat-form-field appearance="outline">
+                <mat-label>Experience</mat-label>
+                <input matInput  placeholder="Ex: 2" type="number" formControlName="experience">
+                <mat-hint>In years</mat-hint>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Package</mat-label>
+                <input matInput  placeholder="Ex: 100000" type="number" formControlName="package">
+                <mat-hint>In rupees</mat-hint>
+            </mat-form-field>
+        </div>
     </div>
-    <div class="row">
-        <mat-form-field appearance="outline">
-            <mat-label>Email</mat-label>
-            <input matInput type="email" placeholder="Ex: bhagya@gmail.com">
-          </mat-form-field>
-          <mat-form-field appearance="outline">
-            <mat-label>Date of Birth</mat-label>
-            <input matInput [matDatepicker]="picker">
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-          
+    <div mat-dialog-actions class="action"> 
+        <button mat-raised-button>Cancel</button>
+        <button mat-raised-button color="primary" type="submit">Save</button>
     </div>
-    <div class="row">
-        <mat-radio-group aria-label="Select an option" color="primary">
-            <mat-label>Gender</mat-label>
-            <mat-radio-button value="male" >Male</mat-radio-button>
-            <mat-radio-button value="female">Female</mat-radio-button>
-          </mat-radio-group>
-    </div>
-    <div class="row">
-        <mat-form-field appearance="outline">
-            <mat-label>Education</mat-label>
-            <mat-select>
-              <mat-option *ngFor="let val of education" [value]="val">
-                {{val}}
-              </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Company</mat-label>
-            <input matInput type="text" placeholder="Ex: Netflix">
-        </mat-form-field>
-    </div>
-    <div class="row">
-        <mat-form-field appearance="outline">
-            <mat-label>Experience</mat-label>
-            <input matInput  placeholder="Ex: 2" type="number">
-            <mat-hint>In years</mat-hint>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Package</mat-label>
-            <input matInput  placeholder="Ex: 100000" type="number">
-            <mat-hint>In rupees</mat-hint>
-        </mat-form-field>
-    </div>
-</div>
-<div mat-dialog-actions class="action"> 
-    <button mat-raised-button>Cancel</button>
-    <button mat-raised-button color="primary">Save</button>
-</div>
+</form>
