--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,6 @@
   .button-container {
     display: flex;
     flex-direction: row;
-    gap: 8px; /* Add some spacing between the buttons */
+    //gap: 5px; /* Add some spacing between the buttons */
   }
   
