--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,7 +74,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
         <td mat-cell *matCellDef="let row"> 
           <div class="button-container">
-            <button mat-icon-button color="primary">
+            <button mat-icon-button color="primary" (click)="openEditForm(row)">
               <mat-icon>edit</mat-icon>
             </button>
             <button mat-icon-button color="warn" (click)="deleteEmployee(row.id)">
